--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,10 @@
     animation: fadeIn 1s 1.8s backwards;
   }
 
+  .container-card:hover .text{
+    visibility: visible;
+  }
+
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
