--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+  body{
+    width: 100%;
+    height: 100%;
+  }
   .balise{
     font-family: 'La Belle Aurore', cursive;
   } 
@@ -24,6 +28,32 @@
   .image-card{
     -webkit-box-shadow: 5px 5px 20px -1px #000000; 
     box-shadow: 5px 5px 20px -1px #000000;
+  }
+  figcaption{
+    position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  padding: 20px;
+  text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  color: white;
+  background: rgba(0, 0, 0, 0.5);
+  transition: all 0.4s;
+  }
+  figure:hover figcaption{
+    opacity: 1;
+    visibility: visible;
+  }
+  .swiper-button-next, .swiper-button-prev{
+    color: black;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: #000000;
   }
     @keyframes fadeIn {
       0% { opacity: 0; }
