--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-  body{
+  
+  body,
+  canvas {
+    position: absolute;
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
   }
   .balise{
     font-family: 'La Belle Aurore', cursive;
@@ -55,6 +60,7 @@
   .swiper-pagination-bullet-active{
     background-color: #000000;
   }
+  
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
